Ensures the contrast between foreground and background colors meets WCAG 2 AA contrast ratio thresholds. (#678)

--- a/origin-trials/styles.css
+++ b/origin-trials/styles.css
@@ -15,7 +15,7 @@ body {
 
 header {
     background-color: #018273;
-    color: #f2f2f2;
+    color: #fefefe;
     display: flex;
     justify-content: center;
     height: 256px;
